--- a/app/src/main/res/layout/fragment_used_water_input.xml
+++ b/app/src/main/res/layout/fragment_used_water_input.xml
@@ -5,7 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.inputPage.WaterUseFragment"
-    android:id= "@+id/usedWaterInput">
+    android:id="@+id/usedWaterInput"
+    >
+
+    <!--androidx.fragment.app.FragmentContainerView
+        android:id="@+id/usedWaterInput"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/-->
 
     <LinearLayout
         android:layout_width="371dp"
@@ -19,11 +25,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="42dp"
+            android:layout_height="81dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/usedWaterInputText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="물 사용량 입력"
@@ -34,14 +40,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="512dp"
+            android:layout_height="480dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="272dp"
                 android:layout_height="45dp"
-                android:text="사용 용도"
+                android:text="1회 기준"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -52,7 +58,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="57dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -64,15 +70,16 @@
                         android:textStyle="bold" />
 
                     <Spinner
-                        android:id="@+id/spinner6"
+                        android:id="@+id/spinnerWash"
                         android:layout_width="264dp"
-                        android:layout_height="41dp"
-                        android:layout_weight="1" />
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="57dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -84,15 +91,16 @@
                         android:textStyle="bold" />
 
                     <Spinner
-                        android:id="@+id/spinner2"
+                        android:id="@+id/spinnerDishWash"
                         android:layout_width="93dp"
-                        android:layout_height="41dp"
-                        android:layout_weight="1" />
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName"
+                        android:id="@+id/ingestionInput"
                         android:layout_width="122dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
@@ -102,7 +110,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="57dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -114,9 +122,9 @@
                         android:textStyle="bold" />
 
                     <EditText
-                        android:id="@+id/editTextTextPersonName9"
-                        android:layout_width="122dp"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/washcarInput"
+                        android:layout_width="221dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
@@ -126,7 +134,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="57dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -139,8 +147,8 @@
 
                     <EditText
                         android:id="@+id/showerInput"
-                        android:layout_width="122dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="221dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
@@ -150,30 +158,31 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="57dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView14"
                         android:layout_width="126dp"
                         android:layout_height="wrap_content"
-                        android:text="사용자 직접 입력 "
+                        android:text="사용자 입력"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/userInput"
-                        android:layout_width="122dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="221dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
-                        android:text="0L" />
+                        android:text="0L"
+                        tools:ignore="DuplicateSpeakableTextCheck" />
 
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/button6"
+                    android:id="@+id/saveBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -192,27 +201,40 @@
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="126dp"
-                android:layout_height="wrap_content"
+                android:layout_height="44dp"
                 android:text="입력된 사용량 : "
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/editTextTextPersonName5"
-                android:layout_width="178dp"
-                android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/usedText"
+                android:layout_width="218dp"
+                android:layout_height="163dp"
                 android:layout_weight="1"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="0L" />
+                android:text="TextView"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/inputResultBtn"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="입력완료" />
 
+        <fragment
+            android:id="@+id/nav_host_fragment_activity_main"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:layout_constraintBottom_toTopOf="@id/nav_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/mobile_navigation" />
+
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
