--- a/app/src/main/res/layout/fragment_used_water_input.xml
+++ b/app/src/main/res/layout/fragment_used_water_input.xml
@@ -2,46 +2,41 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/usedWaterInput"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.inputPage.WaterUseFragment"
-    android:id="@+id/usedWaterInput"
-    >
+    tools:context=".ui.inputPage.WaterUseFragment">
 
-    <!--androidx.fragment.app.FragmentContainerView
-        android:id="@+id/usedWaterInput"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/-->
 
     <LinearLayout
-        android:layout_width="371dp"
-        android:layout_height="694dp"
+        android:layout_width="346dp"
+        android:layout_height="685dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.486">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="81dp"
+            android:layout_width="328dp"
+            android:layout_height="97dp"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/usedWaterInputText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="물 사용량 입력"
-                android:textSize="34sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="480dp"
+            android:layout_height="458dp"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/usedWaterInputText"
+                android:layout_width="215dp"
+                android:layout_height="63dp"
+                android:text="물 사용량 입력"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -104,7 +99,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
-                        android:text="섭취인 수 " />
+                        android:text="1" />
 
                 </LinearLayout>
 
@@ -128,7 +123,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
-                        android:text="회" />
+                        android:text="1" />
 
                 </LinearLayout>
 
@@ -152,7 +147,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName"
-                        android:text="분" />
+                        android:text="1" />
 
                 </LinearLayout>
 
@@ -175,18 +170,19 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
+
                         android:inputType="textPersonName"
-                        android:text="0L"
+                        android:text="1"
                         tools:ignore="DuplicateSpeakableTextCheck" />
 
                 </LinearLayout>
 
                 <Button
                     android:id="@+id/saveBtn"
-                    android:layout_width="wrap_content"
+                    android:layout_width="107dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="저장" />
+                    android:text="계산" />
 
             </LinearLayout>
 
@@ -208,25 +204,25 @@
 
             <TextView
                 android:id="@+id/usedText"
-                android:layout_width="218dp"
-                android:layout_height="163dp"
+                android:layout_width="237dp"
+                android:layout_height="46dp"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="0"
                 android:textSize="20sp" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/inputResultBtn"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="106dp"
+            android:layout_height="wrap_content"
             android:text="입력완료" />
 
         <fragment
-            android:id="@+id/nav_host_fragment_activity_main"
+            android:id="@+id/navigation_waterUserFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintLeft_toLeftOf="parent"
