--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/waterUseTX"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0" />
@@ -60,7 +60,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/waterTaxTX"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0" />
