--- a/app/src/main/res/layout/fragment_used_water_input.xml
+++ b/app/src/main/res/layout/fragment_used_water_input.xml
@@ -8,229 +8,82 @@
     tools:context=".ui.inputPage.WaterUseFragment">
 
 
-    <LinearLayout
-        android:layout_width="346dp"
-        android:layout_height="685dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+    <TextView
+        android:id="@+id/useWaterInput_tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="76dp"
+        android:text="물 사용량 입력"
+        android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="328dp"
-            android:layout_height="97dp"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/useWaterInput_tv_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="1회 기준"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/useWaterInput_tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_title" />
 
-        </LinearLayout>
+    <TextView
+        android:id="@+id/useWaterInput_tv_amountLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="사용량 (L)"
+        app:layout_constraintStart_toStartOf="@+id/userWaterInput_tv_typeLabel"
+        app:layout_constraintTop_toBottomOf="@+id/userWaterInput_tv_typeLabel" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="458dp"
-            android:orientation="vertical">
+    <EditText
+        android:id="@+id/useWaterInput_et_amount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="@+id/useWaterInput_tv_amountLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/useWaterInput_tv_amountLabel"
+        app:layout_constraintTop_toTopOf="@+id/useWaterInput_tv_amountLabel"
+        app:layout_constraintVertical_bias="0.153" />
 
-            <TextView
-                android:id="@+id/usedWaterInputText"
-                android:layout_width="215dp"
-                android:layout_height="63dp"
-                android:text="물 사용량 입력"
-                android:textSize="34sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/userWaterInput_tv_typeLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="사용종류"
+        app:layout_constraintStart_toStartOf="@+id/useWaterInput_tv_subtitle"
+        app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_subtitle" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="272dp"
-                android:layout_height="45dp"
-                android:text="1회 기준"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+    <Spinner
+        android:id="@+id/useWaterInput_sp_useType"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/userWaterInput_tv_typeLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/userWaterInput_tv_typeLabel"
+        app:layout_constraintTop_toTopOf="@+id/userWaterInput_tv_typeLabel"
+        app:layout_constraintVertical_bias="0.0" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="126dp"
-                        android:layout_height="wrap_content"
-                        android:text="세탁"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <Spinner
-                        android:id="@+id/spinnerWash"
-                        android:layout_width="264dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="126dp"
-                        android:layout_height="wrap_content"
-                        android:text="설거지"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <Spinner
-                        android:id="@+id/spinnerDishWash"
-                        android:layout_width="93dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        tools:ignore="SpeakableTextPresentCheck" />
-
-                    <EditText
-                        android:id="@+id/ingestionInput"
-                        android:layout_width="122dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"
-                        android:text="1" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="126dp"
-                        android:layout_height="wrap_content"
-                        android:text="세차"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <EditText
-                        android:id="@+id/washcarInput"
-                        android:layout_width="221dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"
-                        android:text="1" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/shower"
-                        android:layout_width="126dp"
-                        android:layout_height="wrap_content"
-                        android:text="목욕(분)"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <EditText
-                        android:id="@+id/showerInput"
-                        android:layout_width="221dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"
-                        android:text="1" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="57dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView14"
-                        android:layout_width="126dp"
-                        android:layout_height="wrap_content"
-                        android:text="사용자 입력"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <EditText
-                        android:id="@+id/userInput"
-                        android:layout_width="221dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:ems="10"
-
-                        android:inputType="textPersonName"
-                        android:text="1"
-                        tools:ignore="DuplicateSpeakableTextCheck" />
-
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/saveBtn"
-                    android:layout_width="107dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="계산" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="126dp"
-                android:layout_height="44dp"
-                android:text="입력된 사용량 : "
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/usedText"
-                android:layout_width="237dp"
-                android:layout_height="46dp"
-                android:layout_weight="1"
-                android:text="0"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/inputResultBtn"
-            android:layout_width="106dp"
-            android:layout_height="wrap_content"
-            android:text="입력완료" />
-
-        <fragment
-            android:id="@+id/navigation_waterUserFragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@id/nav_view"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navGraph="@navigation/mobile_navigation" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/useWaterInput_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="32dp"
+        android:text="입력완료"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
