--- a/app/src/main/res/layout/fragment_usedwaterinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinput.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="80dp"
         android:text="물 사용량 입력"
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,57 +23,33 @@
         android:id="@+id/useWaterInput_tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="1회 기준"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/useWaterInput_tv_title"
         app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_title" />
 
     <TextView
-        android:id="@+id/useWaterInput_tv_amountLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="사용량 (L)"
-        app:layout_constraintStart_toStartOf="@+id/userWaterInput_tv_typeLabel"
-        app:layout_constraintTop_toBottomOf="@+id/userWaterInput_tv_typeLabel" />
-
-    <EditText
-        android:id="@+id/useWaterInput_et_amount"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/useWaterInput_tv_amountLabel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/useWaterInput_tv_amountLabel"
-        app:layout_constraintTop_toTopOf="@+id/useWaterInput_tv_amountLabel"
-        app:layout_constraintVertical_bias="0.153" />
-
-    <TextView
         android:id="@+id/userWaterInput_tv_typeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
         android:text="사용종류"
         app:layout_constraintStart_toStartOf="@+id/useWaterInput_tv_subtitle"
         app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_subtitle" />
 
     <Spinner
         android:id="@+id/useWaterInput_sp_useType"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/userWaterInput_tv_typeLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.354"
         app:layout_constraintStart_toEndOf="@+id/userWaterInput_tv_typeLabel"
-        app:layout_constraintTop_toTopOf="@+id/userWaterInput_tv_typeLabel"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/userWaterInput_tv_typeLabel" />
 
     <Button
         android:id="@+id/useWaterInput_bt_save"
@@ -85,5 +61,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <fragment
+        android:id="@+id/nav_host_fragment_usedWaterInputLaundry"
+        android:name="com.example.wateradmin.ui.inputPage.UsedWaterInputLaundryFragment"
+        android:layout_width="411dp"
+        android:layout_height="423dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/useWaterInput_sp_useType" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
