--- a/app/src/main/res/layout/fragment_usedwaterinputwashdish.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputwashdish.xml
@@ -9,8 +9,8 @@
         android:id="@+id/usedWaterWashDish_tv_title"
         android:layout_width="128dp"
         android:layout_height="40dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:text="설거지 유형"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -21,9 +21,10 @@
         android:id="@+id/usedWaterWashDish_radigG_modeChoice"
         android:layout_width="211dp"
         android:layout_height="220dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashDish_tv_title"
-        tools:layout_editor_absoluteX="44dp">
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashDish_tv_title">
 
         <TextView
             android:id="@+id/usedWaterWashDish_tv_subtitle"
