--- a/app/src/main/res/layout/fragment_usedwaterinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinput.xml
@@ -12,64 +12,61 @@
         android:id="@+id/useWaterInput_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="36dp"
         android:text="물 사용량 입력"
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/useWaterInput_tv_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="1회 기준"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/useWaterInput_tv_title"
-        app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_title" />
+        tools:layout_editor_absoluteY="154dp" />
 
     <TextView
         android:id="@+id/userWaterInput_tv_typeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
         android:text="사용종류"
-        app:layout_constraintStart_toStartOf="@+id/useWaterInput_tv_subtitle"
+        app:layout_constraintEnd_toStartOf="@+id/useWaterInput_sp_useType"
         app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_subtitle" />
 
     <Spinner
         android:id="@+id/useWaterInput_sp_useType"
         android:layout_width="280dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/userWaterInput_tv_typeLabel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.354"
-        app:layout_constraintStart_toEndOf="@+id/userWaterInput_tv_typeLabel"
-        app:layout_constraintTop_toTopOf="@+id/userWaterInput_tv_typeLabel" />
+        android:layout_marginEnd="28dp"
+
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/usedwaterinput_frameLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/useWaterInput_tv_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1회 기준"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/useWaterInput_tv_title"
+        tools:layout_editor_absoluteX="28dp" />
 
     <Button
         android:id="@+id/useWaterInput_bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         android:text="입력완료"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <fragment
-        android:id="@+id/nav_host_fragment_usedWaterInputLaundry"
-        android:name="com.example.wateradmin.ui.inputPage.UsedWaterInputLaundryFragment"
-        android:layout_width="411dp"
-        android:layout_height="423dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/useWaterInput_sp_useType" />
+
+    <FrameLayout
+        android:id="@+id/usedwaterinput_frameLayout"
+        android:layout_width="409dp"
+        android:layout_height="367dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/useWaterInput_bt_save"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
