--- a/app/src/main/res/layout/fragment_usedwaterinputshower.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputshower.xml
@@ -9,46 +9,35 @@
         android:id="@+id/usedWaterShower_tv_title"
         android:layout_width="128dp"
         android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:text="샤워"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="88dp"
+        android:text="목욕(샤워)"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/usedWaterShower_tv_usedCount"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="@+id/usedWaterShower_tv_usedCount"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/usedWaterShower_tv_usedCount"
         android:layout_width="94dp"
         android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
         android:text="사용 시간"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="56dp" />
+        app:layout_constraintEnd_toStartOf="@+id/usedWaterShower_et_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
 
     <EditText
         android:id="@+id/usedWaterShower_et_usedCount"
         android:layout_width="0dp"
         android:layout_height="43dp"
 
-        android:layout_marginStart="24dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
-        app:layout_constraintStart_toEndOf="@+id/usedWaterShower_tv_usedCount"
-        tools:layout_editor_absoluteY="54dp" />
-
-    <TextView
-        android:id="@+id/usedWaterShower_tv_CountNumber"
-        android:layout_width="35dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="32dp"
-        android:text="분"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/usedWaterShower_et_usedCount"
-        tools:layout_editor_absoluteY="56dp" />
+        tools:layout_editor_absoluteX="145dp"
+        tools:layout_editor_absoluteY="132dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
