--- a/app/src/main/res/layout/fragment_usedwaterinputshower.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputshower.xml
@@ -10,34 +10,45 @@
         android:layout_width="128dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="28dp"
         android:text="목욕(샤워)"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/usedWaterShower_tv_usedCount"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/usedWaterShower_et_usedCount"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="number"
+        android:text="1"
+        app:layout_constraintStart_toEndOf="@+id/usedWaterShower_tv_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
+
+    <TextView
+        android:id="@+id/usedWaterShower_tv_usedMinute"
+        android:layout_width="47dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="8dp"
+        android:text="분"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/usedWaterShower_et_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
+
     <TextView
         android:id="@+id/usedWaterShower_tv_usedCount"
         android:layout_width="94dp"
         android:layout_height="41dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="8dp"
         android:text="사용 시간"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/usedWaterShower_et_usedCount"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
-
-    <EditText
-        android:id="@+id/usedWaterShower_et_usedCount"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-
-        android:ems="10"
-        android:inputType="number"
-        android:text="1"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="132dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
