--- a/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,11 +10,12 @@
 
         android:layout_width="205dp"
         android:layout_height="51dp"
+        android:layout_marginTop="36dp"
         android:text="사용자 직접 입력"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="38dp" />
+        app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_subtitle"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/usedWaterInputUserInput_tv_subtitle"
@@ -21,19 +23,20 @@
         android:layout_height="45dp"
         android:text="리터(L) 기준 "
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="89dp" />
+        app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_et_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_title" />
 
     <EditText
         android:id="@+id/usedWaterInputUserInput_et_usedCount"
         android:layout_width="0dp"
         android:layout_height="43dp"
 
+        android:layout_marginStart="44dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="134dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
 
     <TextView
         android:id="@+id/usedWaterInputUserInput_tv_countTitle"
@@ -41,7 +44,7 @@
         android:layout_height="45dp"
         android:text="L"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="257dp"
-        tools:layout_editor_absoluteY="134dp" />
+        app:layout_constraintStart_toEndOf="@+id/usedWaterInputUserInput_et_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
