--- a/app/src/main/res/layout/fragment_usedwaterinputwashcar.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputwashcar.xml
@@ -10,43 +10,47 @@
         android:id="@+id/usedWaterWashCar_tv_title"
         android:layout_width="128dp"
         android:layout_height="40dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="44dp"
         android:text="세차"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterWashCar_tv_usedCount"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/usedWaterWashCar_tv_usedCount"
+        android:layout_width="74dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="16dp"
+        android:text="횟수 "
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_title" />
 
     <EditText
         android:id="@+id/usedWaterWashCar_et_usedCount"
         android:layout_width="0dp"
         android:layout_height="43dp"
 
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_title"
-        tools:layout_editor_absoluteX="114dp" />
-
-    <TextView
-        android:id="@+id/usedWaterWashCar_tv_usedCount"
-        android:layout_width="74dp"
-        android:layout_height="43dp"
-        android:text="횟수 "
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/usedWaterWashCar_et_usedCount"
-        tools:layout_editor_absoluteY="192dp" />
+        app:layout_constraintStart_toEndOf="@+id/usedWaterWashCar_tv_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_title" />
 
     <TextView
         android:id="@+id/usedWaterWashCar_tv_CountNumber"
         android:layout_width="35dp"
         android:layout_height="43dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
         android:text="회"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/usedWaterWashCar_et_usedCount"
-        tools:layout_editor_absoluteY="192dp" />
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
