--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,35 +9,26 @@
 
 
     <TextView
-        android:id="@+id/waterUseTX"
+        android:id="@+id/home_tx_todayWaterUsedAmount"
         android:layout_width="199dp"
         android:layout_height="44dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="4dp"
         android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/waterTaxTX"
+        app:layout_constraintBottom_toTopOf="@+id/home_tx_todayWaterUsedTax"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="86dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="292dp"
+        android:layout_marginBottom="100dp"
         android:text="당일 수도세:"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/homeAddBtn"
-        app:layout_constraintEnd_toStartOf="@+id/waterTaxTX"
-        app:layout_constraintHorizontal_bias="0.969"
+        app:layout_constraintBottom_toTopOf="@+id/home_bt_add"
+        app:layout_constraintEnd_toStartOf="@+id/home_tx_todayWaterUsedTax"
+        app:layout_constraintHorizontal_bias="0.914"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/waterTaxTX"
-        android:layout_width="164dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="288dp"
-        android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/homeAddBtn"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -46,18 +37,28 @@
         android:text="수도 당일 사용량:"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toStartOf="@+id/waterUseTX"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintEnd_toStartOf="@+id/home_tx_todayWaterUsedAmount"
+        app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/home_tx_todayWaterUsedTax"
+        android:layout_width="164dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="96dp"
+        android:text="0"
+        app:layout_constraintBottom_toTopOf="@+id/home_bt_add"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
-        android:id="@+id/homeAddBtn"
+        android:id="@+id/home_bt_add"
         android:layout_width="94dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="32dp"
         android:text="추가"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
