--- a/app/src/main/res/layout/fragment_usedwaterinputshower.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputshower.xml
@@ -10,20 +10,22 @@
         android:id="@+id/usedWaterShower_tv_title"
         android:layout_width="128dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
         android:text="목욕(샤워)"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/usedWaterShower_tv_usedCount"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.057" />
 
     <EditText
         android:id="@+id/usedWaterShower_et_usedCount"
         android:layout_width="210dp"
         android:layout_height="40dp"
 
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
@@ -31,35 +33,33 @@
         app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
 
     <TextView
-        android:id="@+id/usedWaterShower_tv_usedMinute"
-        android:layout_width="47dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="8dp"
-        android:text="분"
-        android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/usedWaterShower_et_usedCount"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
-
-    <TextView
         android:id="@+id/usedWaterShower_tv_usedCount"
         android:layout_width="94dp"
         android:layout_height="41dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="사용 시간"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterShower_tv_title"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
 
     <Button
         android:id="@+id/usedWaterInputShower_bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="28dp"
         android:text="저장"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/usedWaterShower_tv_usedMinute"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_usedMinute" />
+
+    <TextView
+        android:id="@+id/usedWaterShower_tv_usedMinute"
+        android:layout_width="47dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="24dp"
+        android:text="분"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/usedWaterShower_et_usedCount"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterShower_tv_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
