--- a/app/src/main/res/layout/fragment_usedwaterinputwashcar.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputwashcar.xml
@@ -12,22 +12,24 @@
         android:id="@+id/usedWaterWashCar_tv_title"
         android:layout_width="128dp"
         android:layout_height="40dp"
-        android:layout_marginTop="44dp"
         android:text="세차"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/usedWaterWashCar_tv_usedCount"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.155"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062" />
 
     <TextView
         android:id="@+id/usedWaterWashCar_tv_usedCount"
         android:layout_width="74dp"
         android:layout_height="43dp"
-        android:layout_marginStart="44dp"
         android:layout_marginTop="16dp"
         android:text="횟수 "
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterWashCar_tv_title"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_title" />
 
     <EditText
@@ -59,9 +61,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="36dp"
         android:text="저장"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/usedWaterWashCar_tv_CountNumber"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterWashCar_tv_CountNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
