--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,56 +9,57 @@
 
 
     <TextView
-        android:id="@+id/home_tx_todayWaterUsedAmount"
-        android:layout_width="199dp"
-        android:layout_height="44dp"
-        android:layout_marginEnd="24dp"
+        android:id="@+id/home_tx_showtodayWaterUsedAmount"
+        android:layout_width="88dp"
+        android:layout_height="42dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
         android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/home_tx_todayWaterUsedTax"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/home_tx_showtodayUsedWaterTax"
+        app:layout_constraintEnd_toEndOf="@+id/home_tx_showtodayUsedWaterTax" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="86dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="40dp"
         android:text="당일 수도세:"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/home_bt_add"
-        app:layout_constraintEnd_toStartOf="@+id/home_tx_todayWaterUsedTax"
-        app:layout_constraintHorizontal_bias="0.914"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/home_tx_showtodayUsedWaterTax" />
+
+    <TextView
+        android:id="@+id/home_tx_showtodayUsedWaterTax"
+        android:layout_width="87dp"
+        android:layout_height="44dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="40dp"
+        android:text="0"
+        app:layout_constraintBottom_toTopOf="@+id/home_bt_add"
+        app:layout_constraintEnd_toStartOf="@+id/home_bt_add" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="115dp"
-        android:layout_height="44dp"
+        android:layout_width="116dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:text="수도 당일 사용량:"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toStartOf="@+id/home_tx_todayWaterUsedAmount"
-        app:layout_constraintHorizontal_bias="0.905"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/home_tx_todayWaterUsedTax"
-        android:layout_width="164dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="96dp"
-        android:text="0"
-        app:layout_constraintBottom_toTopOf="@+id/home_bt_add"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/home_tx_showtodayWaterUsedAmount" />
 
     <Button
         android:id="@+id/home_bt_add"
-        android:layout_width="94dp"
-        android:layout_height="50dp"
-        android:text="추가"
+        android:layout_width="127dp"
+        android:layout_height="46dp"
+        android:text="사용량 추가"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.929"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
