--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
    >
 
+    <Button
+        android:id="@+id/home_bt_recordView"
+        android:layout_width="141dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="316dp"
+        android:text="입력 기록 확인"
+        app:layout_constraintBottom_toTopOf="@+id/home_bt_add"
+        app:layout_constraintEnd_toEndOf="@+id/home_bt_add"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/home_bt_add" />
 
     <TextView
         android:id="@+id/home_tx_showtodayWaterUsedAmount"
