--- a/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
@@ -27,25 +27,27 @@
         android:layout_width="119dp"
         android:layout_height="44dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="152dp"
         app:layout_constraintStart_toEndOf="@+id/usedWaterInputUserInput_et_usedWater"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_title" />
-
-    <Button
-        android:id="@+id/usedWaterInputUserInput_bt_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="저장"
-        app:layout_constraintEnd_toEndOf="@+id/usedWaterInputUserInput_sp_literChoice"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_sp_literChoice" />
 
     <TextView
         android:id="@+id/usedWaterInputUserInput_tv_subtitle"
         android:layout_width="146dp"
         android:layout_height="45dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
         android:text="리터(L) 기준 "
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_et_typeUserInput" />
+
+    <TextView
+        android:id="@+id/usedWaterInputUserInput_tv_typtTitle"
+        android:layout_width="146dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="20dp"
+        android:text="용도"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_title"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_title" />
@@ -55,12 +57,34 @@
         android:layout_width="0dp"
         android:layout_height="43dp"
 
+        android:layout_marginStart="4dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
         app:layout_constraintBottom_toTopOf="@+id/usedWaterInputUserInput_bt_save"
         app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_title"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/usedWaterInputUserInput_et_typeUserInput"
+        android:layout_width="0dp"
+        android:layout_height="43dp"
+
+        android:layout_marginStart="4dp"
+        android:ems="10"
+        android:inputType="number"
+        android:text="사용자 입력"
+        app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_typtTitle" />
+
+    <Button
+        android:id="@+id/usedWaterInputUserInput_bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="저장"
+        app:layout_constraintEnd_toEndOf="@+id/usedWaterInputUserInput_sp_literChoice"
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_sp_literChoice" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
