--- a/app/src/main/res/layout/fragment_usedwaterinputshower.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputshower.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ui.inputPage.UsedWaterInputShowerFragment"
+    tools:context=".ui.inputPage.fragment.UsedWaterInputShowerFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
