--- a/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
@@ -61,10 +61,8 @@
         android:ems="10"
         android:inputType="number"
         android:text="1"
-        app:layout_constraintBottom_toTopOf="@+id/usedWaterInputUserInput_bt_save"
         app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_title"
-        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_subtitle" />
 
     <EditText
         android:id="@+id/usedWaterInputUserInput_et_typeUserInput"
@@ -82,7 +80,7 @@
         android:id="@+id/usedWaterInputUserInput_bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:text="저장"
         app:layout_constraintEnd_toEndOf="@+id/usedWaterInputUserInput_sp_literChoice"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_sp_literChoice" />
