--- a/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
+++ b/app/src/main/res/layout/fragment_usedwaterinputuserinput.xml
@@ -72,7 +72,7 @@
         android:layout_marginStart="4dp"
         android:ems="10"
         android:inputType="number"
-        android:text="사용자 입력"
+        android:hint="사용자 입력"
         app:layout_constraintStart_toStartOf="@+id/usedWaterInputUserInput_tv_title"
         app:layout_constraintTop_toBottomOf="@+id/usedWaterInputUserInput_tv_typtTitle" />
 
