기록 불러오기 (백업, 확인)

--- a/app/src/main/res/layout/fragment_recordlist.xml
+++ b/app/src/main/res/layout/fragment_recordlist.xml
@@ -21,59 +21,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.042" />
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="340dp"
-        android:layout_height="605dp"
-        android:layout_marginTop="24dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recordList_rv_records"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recordList_tv_waterRecord"
-        app:layout_constraintVertical_bias="0.022" />
-
-
-    <!--
-    <TextView
-        android:id="@+id/recordList_tv_useType"
-        android:layout_width="208dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="사용 용도"
-        app:layout_constraintStart_toStartOf="@+id/recordList_tv_waterRecord"
-        app:layout_constraintTop_toBottomOf="@+id/recordList_tv_dateView" />
-
-    <TextView
-        android:id="@+id/recordList_tv_waterTax"
-        android:layout_width="208dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="계산된 수도량 "
-        app:layout_constraintStart_toStartOf="@+id/recordList_tv_waterRecord"
-        app:layout_constraintTop_toBottomOf="@+id/recordList_tv_useWater" />
-
-    <TextView
-        android:id="@+id/recordList_tv_dateView"
-        android:layout_width="208dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:text="2022:00:00"
-        app:layout_constraintStart_toStartOf="@+id/recordList_tv_waterRecord"
         app:layout_constraintTop_toBottomOf="@+id/recordList_tv_waterRecord" />
 
-    <TextView
-        android:id="@+id/recordList_tv_useWater"
-        android:layout_width="208dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:text="입력된 물 양"
-        app:layout_constraintStart_toStartOf="@+id/recordList_tv_waterRecord"
-        app:layout_constraintTop_toBottomOf="@+id/recordList_tv_useType" />
-        -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
